--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@angular/http": "^2.0.0-rc.2",
     "@angular/platform-browser": "^2.0.0-rc.2",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.2",
-    "rxjs": "5.0.0-beta.7",
+    "rxjs": "5.0.0-beta.9",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^2.16.0",
+    "html-webpack-plugin": "^2.21.0",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1",
-    "webpack": "^2.1.0-beta.7",
-    "webpack-dev-server": "^2.0.0-beta"
+    "typings": "^1.2.0",
+    "webpack": "^2.1.0-beta.13",
+    "webpack-dev-server": "^2.1.0-beta.0"
   }
 }
